# streak

./: .gitignore  ARCHITECTURE.md  AUDIT.md  Anchor.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PROGRESS.md  README.md  package-lock.json  package.json  railway.json  tsconfig.json
.claude/: plan.md  settings.json
.claude/commands/: continue.md  genius-start.md  hydrate-tasks.md  reset.md  status.md
.claude/discovery/: DISCOVERY.xml
.claude/skills/genius-architect/: SKILL.md
.claude/skills/genius-copywriter/: SKILL.md
.claude/skills/genius-debugger/: SKILL.md
.claude/skills/genius-deployer/: SKILL.md
.claude/skills/genius-designer/: SKILL.md
.claude/skills/genius-dev/: SKILL.md
.claude/skills/genius-integration-guide/: SKILL.md
.claude/skills/genius-interviewer/: SKILL.md
.claude/specs/: SPECIFICATIONS.xml
.genius/: state.json
.mind/: MEMORY.md
app/: next.config.ts
app/public/: manifest.json
docs/: CLAUDE-CODE-2.1-IMPROVEMENTS.md  GETTING-STARTED.md  SKILLS.md  STREAK-BRAND-IDENTITY.md  STREAK-UI-SCREENS.html  TROUBLESHOOTING.md  streak-landing-page.html
programs/streak/: Anchor.toml  Cargo.toml
programs/streak/src/: constants.rs  errors.rs  lib.rs
programs/streak/src/instructions/: checkin.rs  claim_bonus.rs  claim_rewards.rs  initialize.rs  mod.rs  process_death.rs  set_checkin_interval.rs  stake.rs  start_bonus_window.rs  withdraw.rs
programs/streak/src/state/: game_state.rs  mod.rs  player.rs
scripts/: deploy.sh  init-game.ts  initialize.ts  set-interval.ts  setup-vibeship.sh  verify.sh
tests/: streak.ts
(+22 files in other folders)
